--- a/app/src/main/res/layout/fragment_admin_add_imagen_event.xml
+++ b/app/src/main/res/layout/fragment_admin_add_imagen_event.xml
@@ -43,8 +43,9 @@
 
             <ImageView
                 android:id="@+id/ImageEvent"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_width="250dp"
+                android:layout_height="250dp"
                 android:src="@drawable/add_event" />
 
             <LinearLayout
