--- a/app/src/main/res/layout/fragment_admin_event.xml
+++ b/app/src/main/res/layout/fragment_admin_event.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    tools:context=".user.EventFragment">
+    tools:context=".admin.AdminEventFragment">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -14,28 +13,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbarAddEvent"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize">
-
-                <ImageView
-                    android:id="@+id/logoImageView"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:contentDescription="Logo"
-                    android:src="@drawable/logo" />
-                <ImageView
-                    android:id="@+id/heartIcon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="end"
-                    android:layout_marginEnd="16dp"
-                    android:layout_marginRight="16dp"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:padding="8dp"/>
-            </androidx.appcompat.widget.Toolbar>
 
             <ImageView
                 android:id="@+id/imageEvento"
